--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Apprendre le Français</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="theme-color" content="#276EF1"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
